--- a/style.css
+++ b/style.css
@@ -7,6 +7,43 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 /* Add styles here! */
+main {
+  border-top: 5px solid #666666;
+  background-color: #999999;
+  min-height: 100%;
+}
+
+strong {
+  color: #009966;
+}
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk {
+  padding: 4rem 1.5rem 2rem;
+}
+
+
+.card h2 {
+  max-width: 420px;
+  padding: 0.75em 2.5rem;
+  margin-top: 1rem;
+  margin-left: -2.5rem;
+  background-color: #FFBF00;
+  border-bottom: 5px solid#CC9900;
+}
+
+.card {
+  margin-top: 2rem;
+  padding: 1px 1.5rem 1rem;
+  background-color: white;
+  border-bottom: 5px solid #666666;
+}
